# All-You-Need-Is-Discipline

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: trading-agent.mdc
docs/: overview.md  trading-agent-plan.md
memory/: portfolio.md  user_profile.md  watchlist.md
scripts/: fetch_quotes.py
skills/: buy_rating.md  memory_update.md  next_day_plan.md  sell_rating.md  target_screening.md
src/trading_agent/: __init__.py  cli.py  market_data.py  memory.py  models.py  report.py  skills.py
tests/: test_agent_preflight.py  test_boundaries.py  test_cli.py  test_cli_routing.py  test_docs.py  test_market_data.py  test_memory.py  test_models.py  test_report_packets.py  test_skills.py
